force-app/main/default/objects/BMCServiceDesk__Incident_Service_Target__c/BMCServiceDesk__Incident_Service_Target__c.object-meta.xml
<CustomObject>
    <description>This object will store and track incident service target transaction records.</description>
    <label>Incident Service Target</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Incident Service Target#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Service Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>