force-app/main/default/objects/BMCServiceDesk__Incident_Service_Target__c/fields/BMCServiceDesk__EndDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__EndDate__c</fullName>
    <description>Actual end date when SLA is complete.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>