force-app/main/default/objects/BMCServiceDesk__Incident_Service_Target__c/fields/BMCServiceDesk__FKIncident__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKIncident__c</fullName>
    <label>Incident</label>
    <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
    <relationshipLabel>Incident Service Target</relationshipLabel>
    <relationshipName>Incident_Service_Target</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>