force-app/main/default/objects/BMCServiceDesk__Incident_Service_Target__c/fields/BMCServiceDesk__Queue_Based_Time_Tracking__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Queue_Based_Time_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if OLA Transaction record gets qualified because of queue change.</description>
    <label>Queue-Based Time Tracking</label>
    <type>Checkbox</type>
</CustomField>