force-app/main/default/objects/BMCServiceDesk__Incident_Service_Target__c/fields/BMCServiceDesk__RelativeElapsedTimeFormula__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__RelativeElapsedTimeFormula__c</fullName>
    <formula>IF(BMCServiceDesk__RelativeElapsedTime__c &lt;0 , &apos;-&apos;, &apos;&apos;)+
TEXT(ABS(FLOOR(BMCServiceDesk__RelativeElapsedTime__c /(60* If( (BMCServiceDesk__TargetBusinessDays__c  &gt; 0), (BMCServiceDesk__Target_Duration__c/(BMCServiceDesk__TargetBusinessDays__c * 60)), 24))))) + &apos; &apos;+
If( BMCServiceDesk__TargetBusinessDays__c  &gt; 0,$Label.bmcservicedesk__businessdays,$Label.bmcservicedesk__days) + &apos; &apos;+ 
IF(LEN(TEXT(ABS(FLOOR(MOD(BMCServiceDesk__RelativeElapsedTime__c ,(60* If( (BMCServiceDesk__TargetBusinessDays__c  &gt; 0), (BMCServiceDesk__Target_Duration__c/(BMCServiceDesk__TargetBusinessDays__c * 60)), 24)))/60))))==1, &apos;0&apos; + TEXT(ABS(FLOOR(MOD(BMCServiceDesk__RelativeElapsedTime__c ,(60* If( (BMCServiceDesk__TargetBusinessDays__c  &gt; 0), (BMCServiceDesk__Target_Duration__c/(BMCServiceDesk__TargetBusinessDays__c * 60)), 24)))/60))) , TEXT(ABS(FLOOR(MOD(BMCServiceDesk__RelativeElapsedTime__c ,(60* If( (BMCServiceDesk__TargetBusinessDays__c  &gt; 0), (BMCServiceDesk__Target_Duration__c/(BMCServiceDesk__TargetBusinessDays__c * 60)), 24)))/60))))+ 
&apos;:&apos; + 
IF(LEN(TEXT(ABS(FLOOR(MOD(MOD(BMCServiceDesk__RelativeElapsedTime__c ,(60* If( (BMCServiceDesk__TargetBusinessDays__c  &gt; 0), (BMCServiceDesk__Target_Duration__c/(BMCServiceDesk__TargetBusinessDays__c * 60)), 24))),60)))))==1, &apos;0&apos; + TEXT(ABS(FLOOR(MOD(MOD(BMCServiceDesk__RelativeElapsedTime__c ,(60* If( (BMCServiceDesk__TargetBusinessDays__c  &gt; 0), (BMCServiceDesk__Target_Duration__c/(BMCServiceDesk__TargetBusinessDays__c * 60)), 24))),60)))) , TEXT(ABS(FLOOR(MOD(MOD(BMCServiceDesk__RelativeElapsedTime__c ,(60* If( (BMCServiceDesk__TargetBusinessDays__c  &gt; 0), (BMCServiceDesk__Target_Duration__c/(BMCServiceDesk__TargetBusinessDays__c * 60)), 24))),60))))) + 
&apos; HH:MM&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relative Elapsed Time in Day(s) HH:MM</label>
    <type>Text</type>
</CustomField>