force-app/main/default/objects/BMCServiceDesk__Incident_Service_Target__c/fields/BMCServiceDesk__StateValue__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__StateValue__c</fullName>
    <formula>IF(BMCServiceDesk__IsCanceled__c  = true, $Label.bmcservicedesk__servicetargetstatus_canceled, 
CASE( BMCServiceDesk__ClockState__c, &apos;Running&apos;, $Label.bmcservicedesk__servicetargetstatus_in_process, 
&apos;Paused&apos;, $Label.bmcservicedesk__servicetargetstatus_pending, 
&apos;Stopped&apos;,$Label.bmcservicedesk__servicetargetstatus_completed, 
$Label.bmcservicedesk__servicetargetstatus_attached))</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>