force-app/main/default/objects/BMCServiceDesk__Incident_Service_Target__c/fields/BMCServiceDesk__Support_Hour_Applied__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Support_Hour_Applied__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Hour Applied</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Incident_Service_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>