force-app/main/default/objects/BMCServiceDesk__Incident_Service_Target__c/fields/BMCServiceDesk__TargetEndDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__TargetEndDate__c</fullName>
    <description>According to SLA target.</description>
    <label>Target End Date</label>
    <type>DateTime</type>
</CustomField>